python/scl/_bindings/entropy.py

"""
Auto-generated Python bindings for entropy

Source: scl/binding/c_api/entropy.h
Generated by: generate_bindings.py

DO NOT EDIT - This file is automatically generated.
"""

from __future__ import annotations

from ctypes import (
    CFUNCTYPE,
    POINTER,
    Structure,
    c_bool,
    c_char,
    c_char_p,
    c_double,
    c_float,
    c_int,
    c_int8,
    c_int16,
    c_int32,
    c_int64,
    c_long,
    c_longlong,
    c_short,
    c_size_t,
    c_ssize_t,
    c_ubyte,
    c_uint,
    c_uint8,
    c_uint16,
    c_uint32,
    c_uint64,
    c_ulong,
    c_ulonglong,
    c_ushort,
    c_void_p,
    c_wchar_p,
)
from typing import Any, Optional

from .._loader import get_library

# Load the native library
_lib = get_library()


# ===========================================================================
# Functions
# ===========================================================================

# C: int scl_entropy_discrete_entropy(const scl_real_t * probabilities, int n, int use_log2, scl_real_t * entropy_out)
_lib.scl_entropy_discrete_entropy.argtypes = [POINTER(c_double), c_int, c_int, POINTER(c_double)]
_lib.scl_entropy_discrete_entropy.restype = c_int

def scl_entropy_discrete_entropy(probabilities, n, use_log2, entropy_out):
    """
    Args:
        probabilities: const scl_real_t *
        n: int
        use_log2: int
        entropy_out: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_entropy_discrete_entropy(probabilities, n, use_log2, entropy_out)


# C: int scl_entropy_count_entropy(const scl_real_t * counts, int n, int use_log2, scl_real_t * entropy_out)
_lib.scl_entropy_count_entropy.argtypes = [POINTER(c_double), c_int, c_int, POINTER(c_double)]
_lib.scl_entropy_count_entropy.restype = c_int

def scl_entropy_count_entropy(counts, n, use_log2, entropy_out):
    """
    Args:
        counts: const scl_real_t *
        n: int
        use_log2: int
        entropy_out: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_entropy_count_entropy(counts, n, use_log2, entropy_out)


# C: int scl_entropy_row_entropy(struct scl_sparse_matrix * X, scl_real_t * entropies, int n_rows, int normalize, int use_log2)
_lib.scl_entropy_row_entropy.argtypes = [POINTER(c_void_p), POINTER(c_double), c_int, c_int, c_int]
_lib.scl_entropy_row_entropy.restype = c_int

def scl_entropy_row_entropy(X, entropies, n_rows, normalize, use_log2):
    """
    Args:
        X: struct scl_sparse_matrix *
        entropies: scl_real_t *
        n_rows: int
        normalize: int
        use_log2: int
    
    Returns:
        int
    """
    return _lib.scl_entropy_row_entropy(X, entropies, n_rows, normalize, use_log2)


# C: int scl_entropy_kl_divergence(const scl_real_t * p, const scl_real_t * q, int n, int use_log2, scl_real_t * kl_out)
_lib.scl_entropy_kl_divergence.argtypes = [POINTER(c_double), POINTER(c_double), c_int, c_int, POINTER(c_double)]
_lib.scl_entropy_kl_divergence.restype = c_int

def scl_entropy_kl_divergence(p, q, n, use_log2, kl_out):
    """
    Args:
        p: const scl_real_t *
        q: const scl_real_t *
        n: int
        use_log2: int
        kl_out: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_entropy_kl_divergence(p, q, n, use_log2, kl_out)


# C: int scl_entropy_js_divergence(const scl_real_t * p, const scl_real_t * q, int n, int use_log2, scl_real_t * js_out)
_lib.scl_entropy_js_divergence.argtypes = [POINTER(c_double), POINTER(c_double), c_int, c_int, POINTER(c_double)]
_lib.scl_entropy_js_divergence.restype = c_int

def scl_entropy_js_divergence(p, q, n, use_log2, js_out):
    """
    Args:
        p: const scl_real_t *
        q: const scl_real_t *
        n: int
        use_log2: int
        js_out: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_entropy_js_divergence(p, q, n, use_log2, js_out)


# C: int scl_entropy_symmetric_kl(const scl_real_t * p, const scl_real_t * q, int n, int use_log2, scl_real_t * sym_kl_out)
_lib.scl_entropy_symmetric_kl.argtypes = [POINTER(c_double), POINTER(c_double), c_int, c_int, POINTER(c_double)]
_lib.scl_entropy_symmetric_kl.restype = c_int

def scl_entropy_symmetric_kl(p, q, n, use_log2, sym_kl_out):
    """
    Args:
        p: const scl_real_t *
        q: const scl_real_t *
        n: int
        use_log2: int
        sym_kl_out: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_entropy_symmetric_kl(p, q, n, use_log2, sym_kl_out)


# C: int scl_entropy_mutual_information(const scl_index_t * x_binned, const scl_index_t * y_binned, int n, long n_bins_x, long n_bins_y, int use_log2, scl_real_t * mi_out)
_lib.scl_entropy_mutual_information.argtypes = [POINTER(c_int64), POINTER(c_int64), c_int, c_long, c_long, c_int, POINTER(c_double)]
_lib.scl_entropy_mutual_information.restype = c_int

def scl_entropy_mutual_information(x_binned, y_binned, n, n_bins_x, n_bins_y, use_log2, mi_out):
    """
    Args:
        x_binned: const scl_index_t *
        y_binned: const scl_index_t *
        n: int
        n_bins_x: long
        n_bins_y: long
        use_log2: int
        mi_out: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_entropy_mutual_information(x_binned, y_binned, n, n_bins_x, n_bins_y, use_log2, mi_out)


# C: int scl_entropy_joint_entropy(const scl_index_t * x_binned, const scl_index_t * y_binned, int n, long n_bins_x, long n_bins_y, int use_log2, scl_real_t * joint_entropy_out)
_lib.scl_entropy_joint_entropy.argtypes = [POINTER(c_int64), POINTER(c_int64), c_int, c_long, c_long, c_int, POINTER(c_double)]
_lib.scl_entropy_joint_entropy.restype = c_int

def scl_entropy_joint_entropy(x_binned, y_binned, n, n_bins_x, n_bins_y, use_log2, joint_entropy_out):
    """
    Args:
        x_binned: const scl_index_t *
        y_binned: const scl_index_t *
        n: int
        n_bins_x: long
        n_bins_y: long
        use_log2: int
        joint_entropy_out: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_entropy_joint_entropy(x_binned, y_binned, n, n_bins_x, n_bins_y, use_log2, joint_entropy_out)


# C: int scl_entropy_conditional_entropy(const scl_index_t * x_binned, const scl_index_t * y_binned, int n, long n_bins_x, long n_bins_y, int use_log2, scl_real_t * cond_entropy_out)
_lib.scl_entropy_conditional_entropy.argtypes = [POINTER(c_int64), POINTER(c_int64), c_int, c_long, c_long, c_int, POINTER(c_double)]
_lib.scl_entropy_conditional_entropy.restype = c_int

def scl_entropy_conditional_entropy(x_binned, y_binned, n, n_bins_x, n_bins_y, use_log2, cond_entropy_out):
    """
    Args:
        x_binned: const scl_index_t *
        y_binned: const scl_index_t *
        n: int
        n_bins_x: long
        n_bins_y: long
        use_log2: int
        cond_entropy_out: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_entropy_conditional_entropy(x_binned, y_binned, n, n_bins_x, n_bins_y, use_log2, cond_entropy_out)


# C: int scl_entropy_marginal_entropy(const scl_index_t * binned, int n, long n_bins, int use_log2, scl_real_t * marginal_entropy_out)
_lib.scl_entropy_marginal_entropy.argtypes = [POINTER(c_int64), c_int, c_long, c_int, POINTER(c_double)]
_lib.scl_entropy_marginal_entropy.restype = c_int

def scl_entropy_marginal_entropy(binned, n, n_bins, use_log2, marginal_entropy_out):
    """
    Args:
        binned: const scl_index_t *
        n: int
        n_bins: long
        use_log2: int
        marginal_entropy_out: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_entropy_marginal_entropy(binned, n, n_bins, use_log2, marginal_entropy_out)


# C: int scl_entropy_normalized_mi(const scl_index_t * labels1, const scl_index_t * labels2, int n, long n_clusters1, long n_clusters2, scl_real_t * nmi_out)
_lib.scl_entropy_normalized_mi.argtypes = [POINTER(c_int64), POINTER(c_int64), c_int, c_long, c_long, POINTER(c_double)]
_lib.scl_entropy_normalized_mi.restype = c_int

def scl_entropy_normalized_mi(labels1, labels2, n, n_clusters1, n_clusters2, nmi_out):
    """
    Args:
        labels1: const scl_index_t *
        labels2: const scl_index_t *
        n: int
        n_clusters1: long
        n_clusters2: long
        nmi_out: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_entropy_normalized_mi(labels1, labels2, n, n_clusters1, n_clusters2, nmi_out)


# C: int scl_entropy_adjusted_mi(const scl_index_t * labels1, const scl_index_t * labels2, int n, long n_clusters1, long n_clusters2, scl_real_t * ami_out)
_lib.scl_entropy_adjusted_mi.argtypes = [POINTER(c_int64), POINTER(c_int64), c_int, c_long, c_long, POINTER(c_double)]
_lib.scl_entropy_adjusted_mi.restype = c_int

def scl_entropy_adjusted_mi(labels1, labels2, n, n_clusters1, n_clusters2, ami_out):
    """
    Args:
        labels1: const scl_index_t *
        labels2: const scl_index_t *
        n: int
        n_clusters1: long
        n_clusters2: long
        ami_out: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_entropy_adjusted_mi(labels1, labels2, n, n_clusters1, n_clusters2, ami_out)


# C: int scl_entropy_discretize_equal_width(const scl_real_t * values, int n, long n_bins, scl_index_t * binned)
_lib.scl_entropy_discretize_equal_width.argtypes = [POINTER(c_double), c_int, c_long, POINTER(c_int64)]
_lib.scl_entropy_discretize_equal_width.restype = c_int

def scl_entropy_discretize_equal_width(values, n, n_bins, binned):
    """
    Args:
        values: const scl_real_t *
        n: int
        n_bins: long
        binned: scl_index_t *
    
    Returns:
        int
    """
    return _lib.scl_entropy_discretize_equal_width(values, n, n_bins, binned)


# C: int scl_entropy_discretize_equal_frequency(const scl_real_t * values, int n, long n_bins, scl_index_t * binned)
_lib.scl_entropy_discretize_equal_frequency.argtypes = [POINTER(c_double), c_int, c_long, POINTER(c_int64)]
_lib.scl_entropy_discretize_equal_frequency.restype = c_int

def scl_entropy_discretize_equal_frequency(values, n, n_bins, binned):
    """
    Args:
        values: const scl_real_t *
        n: int
        n_bins: long
        binned: scl_index_t *
    
    Returns:
        int
    """
    return _lib.scl_entropy_discretize_equal_frequency(values, n, n_bins, binned)


# C: int scl_entropy_cross_entropy(const scl_real_t * true_probs, const scl_real_t * pred_probs, int n, scl_real_t * cross_entropy_out)
_lib.scl_entropy_cross_entropy.argtypes = [POINTER(c_double), POINTER(c_double), c_int, POINTER(c_double)]
_lib.scl_entropy_cross_entropy.restype = c_int

def scl_entropy_cross_entropy(true_probs, pred_probs, n, cross_entropy_out):
    """
    Args:
        true_probs: const scl_real_t *
        pred_probs: const scl_real_t *
        n: int
        cross_entropy_out: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_entropy_cross_entropy(true_probs, pred_probs, n, cross_entropy_out)


# C: int scl_entropy_gini_impurity(const scl_real_t * probabilities, int n, scl_real_t * gini_out)
_lib.scl_entropy_gini_impurity.argtypes = [POINTER(c_double), c_int, POINTER(c_double)]
_lib.scl_entropy_gini_impurity.restype = c_int

def scl_entropy_gini_impurity(probabilities, n, gini_out):
    """
    Args:
        probabilities: const scl_real_t *
        n: int
        gini_out: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_entropy_gini_impurity(probabilities, n, gini_out)


# ===========================================================================
# Exports
# ===========================================================================

__all__ = [
    "scl_entropy_adjusted_mi",
    "scl_entropy_conditional_entropy",
    "scl_entropy_count_entropy",
    "scl_entropy_cross_entropy",
    "scl_entropy_discrete_entropy",
    "scl_entropy_discretize_equal_frequency",
    "scl_entropy_discretize_equal_width",
    "scl_entropy_gini_impurity",
    "scl_entropy_joint_entropy",
    "scl_entropy_js_divergence",
    "scl_entropy_kl_divergence",
    "scl_entropy_marginal_entropy",
    "scl_entropy_mutual_information",
    "scl_entropy_normalized_mi",
    "scl_entropy_row_entropy",
    "scl_entropy_symmetric_kl",
]